# agenticblocks

./: .gitignore  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_parse.py
.github/workflows/: workflow.yml
core/: graph.py
docs/: MemGPTImpl.md  chat_tutorial_eng.md  chat_tutorial_ptbr.md  chatexample.md  codeplanner.md  cycles.md  heuristicagent.md  mcp_tutorial_eng.md  mcp_tutorial_ptbr.md  mcpservers.md  planner_chat.md  stats.md  validator_loop.md
examples/: 01_hello_world.py  02_llm_pipeline.py  03_mcp_a2a_agent.py  04_mcp_python_native.py  05_basic_blocks.py  06_functionastool.py  06_nested_cycles.py  07_validator_loop.py  08_planner.py  08_planner_v2.py  09_code_planner_local.py  10_code_planner_docker.py  config.py  config.yaml  e2b_agent.py  mcp_server_estoque.py  rlm_example.py
examples/chatbot/: MEMGPT.md  main.py  main_default.py
examples/codetool/: codetool.py
examples/emailchecker/: emailchecker.py
examples/researchagent/: mcp_server_research.py  questionandansweragent.py  researchagent.py  researchagent_ksteps.py  researchagent_mcp.py
examples/test/: test.py
roadmap/: walkthrough.md
runtime/: executor.py
src/agentblocks/: __init__.py
src/agentblocks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentblocks/core/: block.py
src/agentblocks/runtime/: retry.py
src/agenticblocks/: __init__.py
src/agenticblocks/blocks/: __init__.py
tests/: test_executor.py  test_json_to_tool_calls.py  test_llm_agent.py  test_memgpt_agent.py  test_workflow_graph.py
(+29 files in other folders)
