[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentblocks"
version = "0.1.0"
description = "A building block library for composed agent workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "tenacity>=8.0"
]

[tool.setuptools.packages.find]
where = ["src"]
